Fix Book models
